# T-rex-runner

./: .gitignore  config.json  pyproject.toml
src/: config.py  main.py
src/agent/: dqn.py  model.py  replay_buffer.py
src/env/: dino_env.py  game_setup.py
src/rl/: action_space.py  agent.py  model.py  reward.py
