[project]
name = "t-rex-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "mss>=10.2.0",
    "opencv-python>=5.0.0.93",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pytesseract>=0.3.13",
    "selenium>=4.46.0",
    "stable-baselines3[extra]>=2.9.0",
    "tensorflow>=2.21.0",
]
